# Backend_GhostPost_Django

./: .gitignore  README.md  pyproject.toml
src/ghostpost/: models.py  serializers.py  urls.py  views.py
src/ghostpost/migrations/: 0001_initial.py
src/src/: settings.py  urls.py
